PyMaker/datas/object2/RawHTML/i2701/Python_DOC_referPages.tensorflow-syntax-error-pywrap-tensorflow-after-install.txt
<div class="post-text" itemprop="text">
<p>I've setup a virtualenv and using pip installed tensorflow via <code>sudo pip3 install --upgrade https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.10.0-py3-none-any.whl</code>. </p>
<p>However, when I open a python shell to test the install I get the following error:</p>
<pre><code>Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 26 2018, 23:26:24)
[Clang 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; import tensorflow as tf
Traceback (most recent call last):
  File "&lt;stdin&gt;", line 1, in &lt;module&gt;
  File "/Users/joshuablew/Projects/Environments/proj1/lib/python3.7/site-packages/tensorflow/__init__.py", line 22, in &lt;module&gt;
    from tensorflow.python import pywrap_tensorflow  # pylint: disable=unused-import
  File "/Users/joshuablew/Projects/Environments/proj1/lib/python3.7/site-packages/tensorflow/python/__init__.py", line 49, in &lt;module&gt;
    from tensorflow.python import pywrap_tensorflow
  File "/Users/joshuablew/Projects/Environments/proj1/lib/python3.7/site-packages/tensorflow/python/pywrap_tensorflow.py", line 58, in &lt;module&gt;
    from tensorflow.python.pywrap_tensorflow_internal import *
  File "/Users/joshuablew/Projects/Environments/proj1/lib/python3.7/site-packages/tensorflow/python/pywrap_tensorflow_internal.py", line 114
    def TFE_ContextOptionsSetAsync(arg1, async):
                                             ^
SyntaxError: invalid syntax
</code></pre>
<p>I've searched around but can't find a straightforward solution to this. Any ideas? Thanks!</p>
</div>
<div class="post-text" itemprop="text">
<p><code>async</code> is a reserved keyword in Python 3 (<a href="https://docs.python.org/3/reference/lexical_analysis.html#keywords" rel="nofollow noreferrer">here's the full list</a>).</p>
<p>Look like you aren't the only one running into  this problem, there's an active thread on the <code>tensorflow</code> github issue tracker addressing it that dates back to July: <a href="https://github.com/tensorflow/tensorflow/issues/20517" rel="nofollow noreferrer">https://github.com/tensorflow/tensorflow/issues/20517</a></p>
</div>
<span class="comment-copy">Interesting, so should I try using a different version of tensorflow to get around this?</span>
<span class="comment-copy">There's a PR in review right now. You'll have to either pull the code yourself or wait for a new release (hopefully soon? This is a pretty big issue). Here's the comment on the thread that addresses it: <a href="https://github.com/tensorflow/tensorflow/issues/20517#issuecomment-414037701" rel="nofollow noreferrer">github.com/tensorflow/tensorflow/issues/…</a></span>
<span class="comment-copy">Alright, I hope it gets resolved soon too. Thanks for the help</span>
